# Homework_12.1.1

project3/: pyproject.toml
project3/project3/src/: divide.py
