[tool.poetry]
name = "project3"
version = "0.1.0"
description = ""
authors = ["Мария Юркшайтене <masha.afan@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"
pytz = "^2023.3"
django = "4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[tool.poetry.scripts]
say-welcom = 'project3/project3/cli.py:hello'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
